2 files modified, 7 added, 6 deleted

--- a/avaliacoes/atv2/atividades.html
+++ b/avaliacoes/atv2/atividades.html
@@ -1,1 +1,48 @@
-
+<html>
+<head>
+<meta charset="UTF-8">
+  <title>Atividades</title>
+</head>
+<body>
+  <h1>Atividades</h1>
+  <ul>
+    <li><a href="atividades.html">Atividades</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="contato.html">Contato</a></li>
+  </ul>
+  <hr>
+  <h2>Tabela</h2>
+  <table border="3" cellpadding="10px" align="center">
+    <tr bgcolor="D3DD3">
+      <th></th>
+      <th>Domingo</th>
+      <th>Segunda</th>
+      <th>Terça</th>
+      <th>Quarta</th>
+      <th>Quinta</th>
+      <th>Sexta</th>
+      <th>Sábado</th>      
+    </tr>
+    <tr>
+      <td bgcolor="E9967A">7h</td>
+      <td bgcolor="D8BFD8">Igreja</td>
+      <td bgcolor="R0EE6">Inglês</td>
+      <td bgcolor="FF3000">Dobrar roupas</td>
+      <td bgcolor="R4E8AA">preparar café</td>
+      <td bgcolor="FF93RB">Jiu-jitsu</td>
+      <td bgcolor="BA55D3">cardio</td>
+      <td bgcolor="BA55D3">cardio</td>
+    </tr>
+    <tr>
+    <td bgcolor="9932CC">9h</td>
+    <td bgcolor="B0E0E6">estudar teologia</td>
+    <td bgcolor=9BFD178">lavar roupa</td>
+    <td bgcolor="R4E8AA">preparar café</td>
+    <td bgcolor="">Estudos Independentes </td>
+    <td bgcolor="B0C4DE">ler</td>
+    <td bgcolor="A52A2A">instagram</td>
+    <td bgcolor="BA55D3">cardio</td>
+    </tr>
+  </table>
+</body>
+</html>
